@@ -66,6 +66,7 @@ version 2.5.0:
        {"resource":"/cpu=1", "command":"sleep", "param_file":"60\n90\n30"}
     This submits 3 sleep jobs with differents sleep values.
   - Remove any reference to gridlibs and gridapi as these components are obselete
+  - Add stdout and stderr files of each job in oarstat output.
 
 version 2.4.4:
 --------------
